create posting api
